<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/temp_bp3"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:visibility="visible"
        android:id="@+id/Cool_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="144dp"
        android:text="@string/C"
        android:textSize="108sp"
        android:textColor="#f58f29"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="220dp"
        android:text="@string/omfortable"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_detail_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="312dp"
        android:text="@string/showdetail"
        android:textStyle="bold"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:textColor="#FFFFFF"
        android:background="#f9cf01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>