<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/female"
            android:layout_width="108dp"
            android:layout_height="54dp"
            android:text="@string/female"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="#f260e8"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginHorizontal="34dp"
            android:textSize="24sp"
            android:text="@string/gender"/>

        <Button
            android:id="@+id/male"
            android:layout_width="108dp"
            android:layout_height="54dp"
            android:background="#00eeff"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/male"/>

    </LinearLayout>

    <android.support.v7.widget.ContentFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewFlipper
            android:id="@+id/viewflipper_f"
            android:layout_width="310dp"
            android:layout_height="480dp"
            android:visibility="visible"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="48dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/sandal_f" />
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/shirt_f" />
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/short_skirt_f" />
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/short_sleeve_f" />
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/shorts_f" />
            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/vest_f" />

        </ViewFlipper>

        <ViewFlipper
            android:id="@+id/viewflipper_m"
            android:layout_width="310dp"
            android:layout_height="480dp"
            android:visibility="visible"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="48dp">

            <ImageView
                android:id="@+id/imageViewa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/sandal_m" />
            <ImageView
                android:id="@+id/imageViewb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/shirt_m" />
            <ImageView
                android:id="@+id/imageViewd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/short_sleeve_m" />
            <ImageView
                android:id="@+id/imageViewe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/shorts_m" />
            <ImageView
                android:id="@+id/imageViewf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/vest_m" />

        </ViewFlipper>

    </android.support.v7.widget.ContentFrameLayout>

</LinearLayout>